Bug 166978 - Upon opening an odt, there are large blank spaces that are forcing content to go onto a new page. We have noticed that Headers/Footers being Autofit have been a large proponent of this, but not the full cause.
Summary: Upon opening an odt, there are large blank spaces that are forcing content to...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-12 19:59 UTC by dames02.00
Modified: 2025-07-01 20:06 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
First odt sample that shows our issue (15.85 KB, application/octet-stream)
2025-06-12 20:14 UTC, dames02.00
Details
Screenshot of sample 2 odt opened with Libre Office 7.2 (255.00 KB, image/png)
2025-06-12 20:14 UTC, dames02.00
Details
Second odt that had an issue (13.13 KB, application/octet-stream)
2025-06-12 20:15 UTC, dames02.00
Details
Screenshot of sample 2 odt opened with Libre Office 7.2 (256.74 KB, image/png)
2025-06-12 20:16 UTC, dames02.00
Details
Minimal reproducer (1.72 KB, application/vnd.oasis.opendocument.text)
2025-06-21 08:48 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dames02.00 2025-06-12 19:59:47 UTC
Description:
The bug that I describe in summary, appears in several LibreOffice versions/commits.

This bug shows up in my build locally, running the following commit on master branch (which fixed page flickering issue): "ca3e88728f29422ad9e4bd7f9bec08b59cdf4192", shown here on this diff: https://git.libreoffice.org/core/+/65684ffbe89638407cc855e38838c5ae20cc38ee%5E%21, also, I have the issue with the latest "daily build" several days in a row including today, and this bug still appears in each one of those builds.

It also appears to be breaking in different locations of the file, depending on operating system that the odt is opened on. Windows has less issues and less extra blank space than when opening the odt's on a Mac, but issue is still very prevalent on Windows. Also, we have observed that these forms open perfectly fine with LibreOffice version 7-2.

A couple ways we have found that fix the form are, removing Autofit property from Headers/Footers, as well as click on different locations within the headers/footers or body of the odt.

Steps to Reproduce:
1. Open odt (the only step required to see this issue)

Actual Results:
Upon opening an odt, there are large blank spaces that are forcing content to go onto a new page, and this occurs on one or multiple pages depending on form's length.

Expected Results:
When opening an odt, we should not have new pages and blank spaces in unexpected locations.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
I have 2 examples attached here, where if you open the odt in the versions described, it breaks.
Comment 1 dames02.00 2025-06-12 20:14:15 UTC
Created attachment 201238 [details]
First odt sample that shows our issue
Comment 2 dames02.00 2025-06-12 20:14:56 UTC
Created attachment 201239 [details]
Screenshot of sample 2 odt opened with Libre Office 7.2
Comment 3 dames02.00 2025-06-12 20:15:27 UTC
Created attachment 201240 [details]
Second odt that had an issue
Comment 4 dames02.00 2025-06-12 20:16:05 UTC
Created attachment 201241 [details]
Screenshot of sample 2 odt opened with Libre Office 7.2
Comment 5 Alan B. 2025-06-15 02:46:23 UTC
The first sample document behaves especially strangely for me on Windows with the latest master build. Upon initial load, the only text below "The complete Named Insured reads as follows:" is "FNI_TEST1" but when clicking just below that text, all of the text from "FNI_TEST3" to "OTHER NAMED INSURED 20" jumps up from near the bottom of the document to just below "FNI_TEST1", leaving a large blank space where it was previously (above "AA BB CC DD EE").

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cc99f7736e10c8290d34eeb96aa6a3b7fd63a212
CPU threads: 16; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 abhishek.shah 2025-06-20 14:17:08 UTC
We are also seeing lot of issues with autofit and creating more page breaks and content flowing on new page because of autofit different behavior in master build 24.8
Comment 7 Mike Kaganski 2025-06-21 08:02:16 UTC
Regression after 6db63bb533a5c7436793eab86e83f92322b37044.
Comment 8 Saburo 2025-06-21 08:33:01 UTC
sample1.odt(attachment 201238 [details])
'OTHER NAMED INSURED 20' overflows on the second page.

Version: 24.2.2.0.0+ (X86_64) / LibreOffice Community
Build ID: ff7f1b59e22092d8548459e75fe912db852f056f
Comment 9 Mike Kaganski 2025-06-21 08:48:35 UTC
Created attachment 201398 [details]
Minimal reproducer

In this FODT, the section is initially not hidden. Hide it, and the second row of the table jumps to the second page.
Comment 10 Commit Notification 2025-06-21 15:30:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4cfd0c99d1bd85a4927cb3b433b903cc26f5ef95

tdf#166978: replace HUGE_POSITIVE hack with proper upper invalidation

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-06-21 17:29:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/502215d0cc0a07509dd3b75818cc086aae10134f

tdf#166978: replace HUGE_POSITIVE hack with proper upper invalidation

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-06-24 09:08:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f1fa292d4a8f5553990215fb4aef919746c5bec5

tdf#166978: replace HUGE_POSITIVE hack with proper upper invalidation

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 dames02.00 2025-07-01 18:44:08 UTC
We have done extensive testing on this commit above(https://git.libreoffice.org/core/commit/f1fa292d4a8f5553990215fb4aef919746c5bec5) on version 25.8. Most of our forms with similar issues are fixed, except for a couple that are still breaking.

We have opened a new bug for that here with 2 sample forms, odt's attached: https://bugs.documentfoundation.org/show_bug.cgi?id=167326